--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     <h1 style="background-color: hsl(160, 100%, 75%);">YOUTUBE</h1>
@@ -13,8 +14,10 @@
     <button>Subscribe</button>
 <br>
 <hr>
-    <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc">
+    <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc" target="_blank">
         <button> Supersimple.dev</button>
     </a>
+
+    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore magnam aliquid facilis quo laboriosam. Placeat, commodi consectetur sunt facilis incidunt, alias laudantium distinctio rerum neque magnam asperiores eaque error odit!</h2>
 </body>
 </html>
