--- a/index.html
+++ b/index.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link  rel="stylesheet"  href="style.css" >
+
     
 </head>
 <body>
+
+
     <h1 style="background-color: hsl(160, 100%, 75%);">YOUTUBE</h1>
     <button>Home</button>
     <button>About</button>
     <button>FAQ</button>
     <button>Subscribe</button>
-<br>
 <hr>
     <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc" target="_blank">
         <button> Supersimple.dev</button>
     </a>
+
+   <style>
+    button {
+        background-color: hsl(160, 100%, 75%);
+    }
+
+    .YC button {
+        background-color: hsl(36, 100%, 53%);
+    }
+   </style>
+
+    <button class="YC button">
+        Apply at Y Combinator
+    </button>
 
     <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore magnam aliquid facilis quo laboriosam. Placeat, commodi consectetur sunt facilis incidunt, alias laudantium distinctio rerum neque magnam asperiores eaque error odit!</h2>
 </body>
