--- a/index.html
+++ b/index.html
@@ -4,37 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link  rel="stylesheet"  href="style.css" >
+    <link rel="stylesheet" href="style.css">
 
-    
 </head>
 <body>
+    <h1>Y COMBINATOR BOARD</h1>
 
-
-    <h1 style="background-color: hsl(160, 100%, 75%);">YOUTUBE</h1>
-    <button>Home</button>
-    <button>About</button>
-    <button>FAQ</button>
-    <button>Subscribe</button>
-<hr>
-    <a href="https://www.youtube.com/watch?v=G3e-cpL7ofc" target="_blank">
-        <button> Supersimple.dev</button>
-    </a>
-
-   <style>
-    button {
-        background-color: hsl(160, 100%, 75%);
-    }
-
-    .YC button {
-        background-color: hsl(36, 100%, 53%);
-    }
-   </style>
-
-    <button class="YC button">
+    <button class="yc">
         Apply at Y Combinator
     </button>
 
-    <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Labore magnam aliquid facilis quo laboriosam. Placeat, commodi consectetur sunt facilis incidunt, alias laudantium distinctio rerum neque magnam asperiores eaque error odit!</h2>
+    <button class="thiel">
+        Apply for Thiel Fellowship
+    </button>
 </body>
 </html>
